2021-07-12  Alexander Mikhaylenko  <alexm@gnome.org>

        [GTK] Adwaita entries should follow the system cursor blink settings
        https://bugs.webkit.org/show_bug.cgi?id=227856

        Reviewed by Adrian Perez de Castro.

        Get the caret blink interval from GtkSettings if available, same as it was done
        for the GTK theme before.

        * rendering/RenderThemeAdwaita.cpp:
        (WebCore::RenderThemeAdwaita::caretBlinkInterval const):
        * rendering/RenderThemeAdwaita.h:

2021-07-12  Alexander Mikhaylenko  <alexm@gnome.org>

        [GTK4] Scrollbar click doesn't work as expected when native scrollbars are off
        https://bugs.webkit.org/show_bug.cgi?id=226331

        Reviewed by Carlos Garcia Campos.

        Make Adwaita scrollbar theme follow the GTK setting if possible.

        * platform/adwaita/ScrollbarThemeAdwaita.cpp:
        (WebCore::ScrollbarThemeAdwaita::handleMousePressEvent):

2021-07-11  Chris Dumez  <cdumez@apple.com>

        :link and :visited pseudo-class selectors should not match <link> elements
        https://bugs.webkit.org/show_bug.cgi?id=227847

        Reviewed by Sam Weinig.

        :link, :visited and :any-link should only match <a> and <area> elements as per:
        - https://drafts.csswg.org/selectors/#the-any-link-pseudo

        Blink and Gecko match the specification. However, WebKit was incorrectly matching
        <link> elements too.

        No new tests, rebaselined existing tests.

        * html/HTMLLinkElement.cpp:
        (WebCore::HTMLLinkElement::parseAttribute):

2021-07-11  Chris Dumez  <cdumez@apple.com>

        XMLSerializer.serializeToString() doesn't properly escape \n, \n and \t
        https://bugs.webkit.org/show_bug.cgi?id=227844

        Reviewed by Darin Adler.

        XMLSerializer.serializeToString() doesn't properly escape \n, \n and \t.
