@@ -1,5 +1,17 @@
 2021-07-12  Alexander Mikhaylenko  <alexm@gnome.org>
 
+        [GTK][WPE] Match Adwaita scrollbars more closely
+        https://bugs.webkit.org/show_bug.cgi?id=227870
+
+        Reviewed by Michael Catanzaro.
+
+        Adjust the dimensions to match GTK as closely as possible.
+
+        * platform/adwaita/ScrollbarThemeAdwaita.cpp:
+        (WebCore::ScrollbarThemeAdwaita::paint):
+
+2021-07-12  Alexander Mikhaylenko  <alexm@gnome.org>
+
         [GTK] Adwaita entries should follow the system cursor blink settings
         https://bugs.webkit.org/show_bug.cgi?id=227856
 
